Fixing layout issues and ading micro interactions animation

--- a/src/app/components/atoms/menu-icon/menu-icon.component.scss
+++ b/src/app/components/atoms/menu-icon/menu-icon.component.scss
@@ -1,4 +1,3 @@
 app-icon-tag{
-    padding-right: 20px;
     cursor: pointer;
 }
