--- a/src/app/components/atoms/palet-page-status/palet-page-status.component.scss
+++ b/src/app/components/atoms/palet-page-status/palet-page-status.component.scss
@@ -2,6 +2,7 @@
     padding: .2em;
     padding-top: 0em;
     padding-bottom: 0em;
+    cursor: pointer;
 }
 .palet__wrapper.off{
     border-radius: 2em;
