--- a/src/app/components/molecules/informative-navigation/informative-navigation.component.scss
+++ b/src/app/components/molecules/informative-navigation/informative-navigation.component.scss
@@ -4,6 +4,7 @@
     app-icon-tag{
         align-self: center;
         margin-left: 10px;
+        cursor: pointer;
     }
     p{
         margin-left: 10px;
