--- a/src/app/components/organisms/icon-page-midle-row/icon-page-midle-row.component.scss
+++ b/src/app/components/organisms/icon-page-midle-row/icon-page-midle-row.component.scss
@@ -12,6 +12,7 @@ svg{
 }
 app-menu-icon{
     margin-left: auto;
+    margin-right: 20px;
 }
 app-floating-icons-wrapper{
     width: 90%;
