--- a/src/app/components/organisms/icon-page-top-row/icon-page-top-row.component.scss
+++ b/src/app/components/organisms/icon-page-top-row/icon-page-top-row.component.scss
@@ -24,6 +24,7 @@
 app-image-tag {
     margin-top: -2%;
     margin-left: -2%;
+    cursor: pointer;
 }
 
 #top-line.night::before, #top-line.afternoon::before{
