--- a/src/app/components/organisms/timeline-page-midle-row/timeline-page-midle-row.component.scss
+++ b/src/app/components/organisms/timeline-page-midle-row/timeline-page-midle-row.component.scss
@@ -17,6 +17,7 @@
 }
 app-menu-icon{
    margin-left: auto;
+   margin-right: 20px;
 }
 app-timeline-wrapper{
     width: 85%;
